objects/Asset.object
<CustomObject>
    <fields>
        <fullName>Asset_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asset Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>test_1__c</fullName>
        <label>test 1</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test_2__c</fullName>
        <label>test 2</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>